--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.android_studio.olga.gibdd_servis.MainActivity">
+    tools:context="ru.android_studio.gibdd_servis.MainActivity">
 
     <include layout="@layout/toolbar" />
 
