--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -31,12 +31,15 @@
                 android:layout_height="wrap_content"
                 android:text="Серия водительского удостоверения"
                 android:textSize="18sp"
-                android:id="@+id/SeriesLicenseTextView" />
+                android:id="@+id/series_license_text_view" />
     
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/SeriesLicenseEditText" />
+                android:hint="77AA"
+                android:maxLength="4"
+                android:maxLines="1"
+                android:id="@+id/series_license_edit_text" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -55,12 +58,16 @@
                 android:layout_height="wrap_content"
                 android:text="Номер водительского удостоверения"
                 android:textSize="18sp"
-                android:id="@+id/NumberLicenseTextView" />
+                android:id="@+id/number_license_text_view" />
     
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/NumberLicenseEditText" />
+                android:hint="000000"
+                android:inputType="number"
+                android:maxLength="6"
+                android:maxLines="1"
+                android:id="@+id/number_license_edit_text" />
     
             <TextView
                 android:layout_width="match_parent"
@@ -77,10 +84,12 @@
                 android:id="@+id/DateOfIssueLinearLayout">
     
                 <EditText
-                    android:id="@+id/DateOfIssueEditText"
+                    android:id="@+id/date_of_issue_edit_text"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:maxLength="10"
+                    android:maxLines="1"
                     android:layout_gravity="center">
                 </EditText>
     
@@ -108,12 +117,13 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:ems="10"
+                android:inputType="number"
+                android:maxLength="5"
+                android:maxLines="1"
                 android:id="@+id/captcha_edit_text" />
     
             <Button
-                android:id="@+id/btnNext"
+                android:id="@+id/check_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
