--- a/app/src/main/res/layout-land/activity_question.xml
+++ b/app/src/main/res/layout-land/activity_question.xml
@@ -26,6 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Фамилия"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 android:id="@+id/SurnameTextView"
                 android:layout_weight="1"
@@ -43,6 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Имя"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 android:id="@+id/NameTextView"
                 android:layout_weight="1"
@@ -59,6 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Отчество"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:id="@+id/MiddleNameTextView"
                 android:layout_weight="1"
@@ -75,6 +81,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:text="Контактный телефон"
                 android:id="@+id/PhoneTextView"
                 android:layout_weight="1"
@@ -92,6 +100,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:text="Получить ответ"
                 android:id="@+id/AnswerTextView"
                 android:layout_weight="1"
