--- a/app/src/main/res/layout-land/activity_question_next.xml
+++ b/app/src/main/res/layout-land/activity_question_next.xml
@@ -27,7 +27,9 @@
                 android:layout_height="wrap_content"
                 android:text="Обращение адресовано"
                 android:textSize="17sp"
+                android:textStyle="bold"
                 android:id="@+id/RecipientTextView"
+                android:textColor="@color/black"
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical" />
 
@@ -41,7 +43,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Цель обращения"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/GoalOfRequestTextView"
                 android:layout_weight="1"
@@ -57,7 +61,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Текст обращения"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/TextOfRequestTextView"
                 android:layout_weight="1"
@@ -73,7 +79,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Добавить файл"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/FileTextView"
                 android:layout_weight="1"
@@ -89,9 +97,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="17sp"
                 android:text="Введите символы с картинки"
                 android:id="@+id/CuptureTextView"
+                android:textStyle="bold"
                 android:layout_weight="1"
                 android:paddingTop="0dp"
                 />
