--- a/app/src/main/res/layout/activity_question_next.xml
+++ b/app/src/main/res/layout/activity_question_next.xml
@@ -26,6 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Обращение адресовано"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:textSize="17sp"
                 android:id="@+id/RecipientTextView"
                 android:layout_weight="1"
@@ -42,6 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Цель обращения"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/GoalOfRequestTextView"
                 android:layout_weight="1"
@@ -57,7 +61,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Текст обращения"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/TextOfRequestTextView"
                 android:layout_weight="1"
@@ -74,7 +80,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Добавить файл"
+                android:textStyle="bold"
                 android:textSize="17sp"
                 android:id="@+id/FileTextView"
                 android:layout_weight="1"
@@ -90,7 +98,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="17sp"
+                android:textStyle="bold"
                 android:text="Введите символы с картинки"
                 android:id="@+id/CuptureTextView"
                 android:layout_weight="1"
